# blocke

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  Cargo.toml  Cross.toml  README.md  cooler.prt.1  typos.toml
.cargo/: config.toml
.cross/aarch64-unknown-linux-gnu/: Dockerfile
.github/workflows/: ci.yml  deploy-linux-aarch64.yml  deploy.yml  pre-commit.yml  rattler-build.yml
crates/gps/: Cargo.toml
crates/gps/src/: main.rs
crates/nmea/: Cargo.toml
crates/nmea/src/: context.rs  enums.rs  lib.rs  nmea0183.rs  nmea_data.rs  parser.rs  primitives.rs  traits.rs  utils.rs
crates/nmea/src/nmea0183/: dhv.rs  gga.rs  gll.rs  gsa.rs  vtg.rs  zda.rs
crates/nmea/src/nmea_data/: dhv.rs  gga.rs  gll.rs  gsa.rs  vtg.rs  zda.rs
crates/rax/: Cargo.toml
crates/rax-nmea/: Cargo.toml  README.md
crates/rax-nmea/benches/: dhv.rs  nmea.rs  rules.rs
crates/rax-nmea/examples/: gps.rs  gps_async.rs
crates/rax-nmea/src/: data.rs  dispatcher.rs  lib.rs  macros.rs  nmea_data.rs  rules.rs  sign.rs  utils.rs
crates/rax-nmea/src/data/: dhv.rs  dtm.rs  gbq.rs  gbs.rs  gga.rs  gll.rs  glq.rs  gnq.rs  gns.rs  gpq.rs  grs.rs  gsa.rs  gst.rs  gsv.rs  rmc.rs  ths.rs  txt.rs  vlw.rs  vtg.rs  zda.rs
crates/rax-nmea/src/dispatcher/: async_dispatcher.rs  sync_dispatcher.rs
crates/rax-nmea/src/nmea_data/: dhv.rs  gga.rs  gll.rs  gsa.rs  gst.rs  rmc.rs  vtg.rs  zda.rs
crates/rax-nmea/src/rules/: nmea_coord.rs  nmea_date.rs  nmea_degree.rs  nmea_time.rs  nmea_utc.rs  nmea_validate.rs
crates/rax-nmea/src/utils/: nmea_coord.rs  validate_nmea.rs
crates/rax-nmea/tests/: parse.rs  parse_nmea.rs
crates/rax-parser/: Cargo.toml
crates/rax-parser/examples/: reader.rs  serial-reader.rs
crates/rax-parser/src/: lib.rs  str_parser.rs
crates/rax-parser/src/io/: reader.rs
crates/rax-parser/src/str_parser/: rules.rs
crates/rax-parser/src/str_parser/filters/: char_set.rs
crates/rax-parser/src/str_parser/rules/: byte_count.rs  char.rs  char_count.rs  one_of_char_set.rs  until.rs  until_one_of_char_set.rs
crates/rax-utils/: Cargo.toml
crates/rax-utils/examples/: devices.rs  list-devices.rs
crates/rax/benches/: rules.rs
crates/rax/examples/: devices.rs  list-devices.rs  reader.rs  serial-reader-async.rs  serial-reader.rs  text-reader-async.rs
crates/rax/src/: device.rs  devices.rs  io.rs  lib.rs  str_parser.rs
crates/rax/src/io/: devices.rs  reader.rs  reader_async.rs
crates/rax/src/str_parser/: filters.rs  flow_rules.rs  global_rules.rs  rules.rs  verb.rs
crates/rax/src/str_parser/filters/: char.rs  char_set.rs
crates/rax/src/str_parser/flow_rules/: byte_count.rs  char.rs  char_count.rs  charset.rs  until.rs
crates/rax/src/str_parser/rules/: byte_count.rs  char.rs  char_count.rs  charset.rs  count.rs  in_char_set.rs  n_in_charset.rs  one_in_char_set.rs  one_of_char_set.rs  until.rs  until_char.rs  until_n_in_char_set.rs  until_not_in_char_set.rs  until_one_in_char_set.rs  until_str.rs
crates/term-nmea/: Cargo.toml  build.rs
crates/term-nmea/src/: app.rs  cli.rs  config.rs  logging.rs  main.rs  serial.rs  settings.rs  tab.rs  ui.rs
crates/term-nmea/src/settings/: tab_coord.rs
crates/term-nmea/src/tab/: coord.rs  info.rs  nmea.rs  settings.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs
crates/tui-gnss-toolkit/: Cargo.toml
data/: gps.txt
deploy/.pixi/manifests/: pixi-global.toml
deploy/bench/: .gitignore  cpu-ram.sh  install.sh  pixi.toml  pt.sh  sd.sh  stress.sh
deploy/config/: pixi-global.toml
deploy/linux-aarch64/config/: pixi-global.toml
deploy/linux-aarch64/scripts/: proxy.sh
deploy/scripts/: clean.sh  install-tools.sh  proxy.sh  routine.sh
pre-commit/: pixi.toml
rattler/: pixi.toml  publish.ps1
rattler/proj/: build-proj.ps1  ci-proj.ps1  recipe.yaml
rattler/proj_build/: vcpkg-install.ps1  vcpkg-setup.ps1
scripts/: cargo-doc.ps1  cross-build-linux-aarch64.ps1  cross-build.ps1  deploy-linux-aarch64.ps1  deploy.ps1  download-balenaEtcher.ps1  download-image.ps1  download-rufus.ps1  setup.ps1
