[workspace]
members = ["./crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.0.26"

[workspace.dependencies]
rax = { path = "./crates/rax" }
rax-nmea = { path = "./crates/rax-nmea" }

async-trait = { version = "0.1" }
chrono = { version = "0.4.40", features = ["serde"] }
clerk = { git = "https://github.com/Glatzel/toolbox", tag = "v0.0.21" }
float-cmp = "0.10.0"
miette = { version = "7.6.0", features = ["fancy"] }
serde = { version = "1.0.219", features = ["derive"] }
serialport = "4.7.2"
tokio = { version = "1", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = true

[profile.develop]
inherits = "dev"
