[workspace]
members = ["./crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.0.26"

[workspace.dependencies]
rax = { path = "./crates/rax" }
rax-nmea = { path = "./crates/rax-nmea" }

async-trait = { version = "0.1" }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
clerk = { git = "https://github.com/Glatzel/toolbox", tag = "v0.0.22" }
criterion = { package = "codspeed-criterion-compat", version = "2.10.1" }
crossterm = "0.29.0"
float-cmp = "0.10.0"
miette = { version = "7.6.0", features = ["fancy"] }
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serialport = "4.7.2"
tokio = { version = "1", default-features = false }
tokio-serial = "5.4.5"
toml = "0.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = true

[profile.develop]
inherits = "dev"
