[package]
edition.workspace = true
name = "nmea"
version.workspace = true

[dependencies]
chrono = { workspace = true }
clerk = { workspace = true }
miette = { workspace = true }
num_enum = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
float-cmp ={ workspace = true }
test_utils={ workspace = true }

[features]
log = ["clerk/log"]
