[package]
edition.workspace = true
name = "rax-nmea"
version.workspace = true

[dependencies]
chrono = { workspace = true }
clerk = { workspace = true }
futures = { workspace = true, optional = true }
miette = { workspace = true }
rax = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
float-cmp = { workspace = true }
serialport = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
async = ["futures", "rax/async"]
log = ["clerk/log"]

[[bench]]
harness = false
name = "nmea"

[[bench]]
harness = false
name = "rules"
