[package]
edition.workspace = true
name = "term-nmea"
version.workspace = true

[dependencies]
crossterm = { workspace = true }
miette = { workspace = true }
rax = { workspace = true, features = ["async"] }
rax-nmea = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
