[package]
edition.workspace = true
name = "term-nmea"
version.workspace = true

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
clerk = { workspace = true, features = ["log"] }
crossterm = { workspace = true }
miette = { workspace = true , features = ["fancy"]}
once_cell = { workspace = true }
ratatui = { workspace = true }
rax = { workspace = true, features = ["async"] }
rax-nmea = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
tokio-serial = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }
